--- a/FRONTEND/src/app/catalogue/catalogue.component.html
+++ b/FRONTEND/src/app/catalogue/catalogue.component.html
@@ -3,7 +3,7 @@
         <div>
             <h6>Catalogue</h6>
         </div>
-        <input [(ngModel)]="researchInput" placeholder="Recherchez par n'importe quel champ"/>
+        <input #search [(ngModel)]="researchInput" placeholder="Recherchez par n'importe quel champ"/>
         <table>
             <thead>
                 <tr>
